# httpserv

./: .gitignore  CMakeLists.txt  README.md  httpserv.c  httpserv.h  main.c
src/DataTypes/binary_tree/: binarytree.c  binarytree.h
src/DataTypes/hashtable/: hashtab.c  hashtab.h
src/examples/: client.c  server.c
src/http/: http.c  http.h
src/net/: net.c  net.h
src/test/: test.c  test.h
